--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -7,11 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-K17OPLG\\SQLEXPRESS;Database=Mango_Coupon;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-K17OPLG\\SQLEXPRESS;Database=Mango_Auth;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AuthSettings": {
+    "JwtOptions": {
       "Secret": "Secret goes here",
       "Issuer": "mango-auth-api",
       "Audience": "mango-client"
+    }
   }
 }
