--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -13,5 +13,9 @@
     "Secret": "Secret goes here",
     "Issuer": "mango-auth-api",
     "Audience": "mango-client"
+  },
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7000",
+    "CouponAPI": "https://localhost:7001"
   }
 }
