--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-K17OPLG\\SQLEXPRESS;Database=Mango_Auth;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=tcp:learningsandtryouts.database.windows.net,1433;Initial Catalog=productcouponmanagement;Persist Security Info=False;User ID=adminadmin;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Server=tcp:couponproductmanagement.database.windows.net,1433;Initial Catalog=productcouponmanagedb;Persist Security Info=False;User ID=adminadmin;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Server=DESKTOP-K17OPLG\\SQLEXPRESS;Database=Mango_Auth;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AuthSettings": {
     "JwtOptions": {
