--- a/Mango.Services.EmailAPI/appsettings.json
+++ b/Mango.Services.EmailAPI/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBDefaultConnection": "Server=DESKTOP-K17OPLG\\SQLEXPRESS;Database=Mango_Email;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=tcp:learningsandtryouts.database.windows.net,1433;Initial Catalog=productcouponmanagement;Persist Security Info=False;User ID=adminadmin;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    //"DefaultConnection": "Server=tcp:couponproductmanagement.database.windows.net,1433;Initial Catalog=productcouponmanagedb;Persist Security Info=False;User ID=adminadmin;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    //"DBDefaultConnection": "Server=DESKTOP-K17OPLG\\SQLEXPRESS;Database=Mango_Email;Trusted_Connection=True;TrustServerCertificate=True;",
     "ServiceBusConnection": "Endpoint=sb://mangowebad.servicebus.windows.net/;SharedAccessKeyName=mangoweb;SharedAccessKey=wKHLUrHOUZ6Q25N0oPUImIYPrl+cnFIOl+ASbENQetA=;EntityPath=emailshoppingcart"
   },
   "TopicAndQueueNames": {
