--- a/Mango.Services.AuthAPI/Mango.Services.AuthAPI.csproj
+++ b/Mango.Services.AuthAPI/Mango.Services.AuthAPI.csproj
@@ -13,7 +13,8 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.9" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.9" />
 	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.10" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
 		  <PrivateAssets>all</PrivateAssets>
