--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:learningsandtryouts.database.windows.net,1433;Initial Catalog=productcouponmanagement;Persist Security Info=False;User ID=adminadmin;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnection": "Data Source=productcouponmanagement.db"
+    //"DefaultConnection": "Server=tcp:learningsandtryouts.database.windows.net,1433;Initial Catalog=productcouponmanagement;Persist Security Info=False;User ID=adminadmin;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     //"DefaultConnection": "Server=tcp:couponproductmanagement.database.windows.net,1433;Initial Catalog=productcouponmanagedb;Persist Security Info=False;User ID=adminadmin;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"DefaultConnection": "Server=DESKTOP-K17OPLG\\SQLEXPRESS;Database=Mango_ShoppingCartAPI;Trusted_Connection=True;TrustServerCertificate=True;"
   },
