--- a/.github/workflows/build and deploy to azure.yml
+++ b/.github/workflows/build and deploy to azure.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      - name: echo workspace
+        run: echo "workspace - ${{ github.workspace }}"
+        
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{ github.workspace }}/myapp
 
