--- a/.github/workflows/build and deploy to azure.yml
+++ b/.github/workflows/build and deploy to azure.yml
@@ -58,9 +58,43 @@ jobs:
 
       - name: dotnet publish web
         run: dotnet publish ./${{env.Path_Web}}/ -c Release -o ${{ github.workspace }}/${{env.Path_Web}}/myapp
-            
-      - name: Upload artifact for deployment job
+        
+  upload:
+    runs-on: self-hosted
+
+    steps:
+      - name: Upload artifact auth api
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{ github.workspace }}/myapp
+          name: auth-api
+          path: ${{ github.workspace }}/${{env.Path_Auth_API}}/myapp
+
+      - name: Upload artifact coupon api
+        uses: actions/upload-artifact@v4
+        with:
+          name: coupon-api
+          path: ${{ github.workspace }}/${{env.Path_Coupon_API}}/myapp
+
+      - name: Upload artifact email api
+        uses: actions/upload-artifact@v4
+        with:
+          name: email-api
+          path: ${{ github.workspace }}/${{env.Path_Email_API}}/myapp
+
+      - name: Upload artifact product api
+        uses: actions/upload-artifact@v4
+        with:
+          name: product-api
+          path: ${{ github.workspace }}/${{env.Path_Product_API}}/myapp
+
+      - name: Upload artifact shoppingcart api
+        uses: actions/upload-artifact@v4
+        with:
+          name: shoppingcart-api
+          path: ${{ github.workspace }}/${{env.Path_ShoppingCart_API}}/myapp
+
+      - name: Upload artifact web
+        uses: actions/upload-artifact@v4
+        with:
+          name: web-ui
+          path: ${{ github.workspace }}/${{env.Path_Web}}/myapp
