Update build and deploy to azure.yml
build job completion then artifact upload

--- a/.github/workflows/build and deploy to azure.yml
+++ b/.github/workflows/build and deploy to azure.yml
@@ -61,7 +61,7 @@ jobs:
         
   upload:
     runs-on: self-hosted
-
+    needs: build
     steps:
       - name: Upload artifact auth api
         uses: actions/upload-artifact@v4
