--- a/.github/workflows/build and deploy to azure.yml
+++ b/.github/workflows/build and deploy to azure.yml
@@ -98,3 +98,43 @@ jobs:
         with:
           name: web-ui
           path: ${{ github.workspace }}/${{env.Path_Web}}/myapp
+          
+  download:
+    runs-on: self-hosted
+    needs: upload
+    steps:
+      - name: download artifact auth api
+        uses: actions/download-artifact@v4
+        with:
+          name: auth-api
+          path: ${{ github.workspace }}/${{env.Path_Auth_API}}/myapp
+
+      - name: download artifact coupon api
+        uses: actions/download-artifact@v4
+        with:
+          name: coupon-api
+          path: ${{ github.workspace }}/${{env.Path_Coupon_API}}/myapp
+
+      - name: download artifact email api
+        uses: actions/download-artifact@v4
+        with:
+          name: email-api
+          path: ${{ github.workspace }}/${{env.Path_Email_API}}/myapp
+
+      - name: download artifact product api
+        uses: actions/download-artifact@v4
+        with:
+          name: product-api
+          path: ${{ github.workspace }}/${{env.Path_Product_API}}/myapp
+
+      - name: download artifact shoppingcart api
+        uses: actions/download-artifact@v4
+        with:
+          name: shoppingcart-api
+          path: ${{ github.workspace }}/${{env.Path_ShoppingCart_API}}/myapp
+
+      - name: download artifact web
+        uses: actions/download-artifact@v4
+        with:
+          name: web-ui
+          path: ${{ github.workspace }}/${{env.Path_Web}}/myapp
